crates/aranya-policy-compiler/tests/data/commands/recall_statement_in_action.fail.snap
---
source: crates/aranya-policy-compiler/tests/tests.rs
expression: error
---
error: invalid statement
  |
1 | action act() {
2 |     recall handle()
  |     ^^^^^^^^^^^^^^^ statement not allowed in action context
3 | }
  |
